force-app/main/default/objects/custom_create88__c/custom_create88__c.object-meta.xml
<CustomObject>
    <label>Custom created object88</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects88</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>