force-app/main/default/objects/custom_create88__c/fields/custom_create_88field665__c.field-meta.xml
<CustomField>
    <fullName>custom_create_88field665__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 88field665</label>
    <type>Checkbox</type>
</CustomField>